--- a/pom.xml
+++ b/pom.xml
@@ -47,10 +47,12 @@
 
         <spring-data-jpa.version>2.4.1</spring-data-jpa.version>
         <javax.persistence-api.version>2.2</javax.persistence-api.version>
+        <hibernate-core.version>5.4.24.Final</hibernate-core.version>
     </properties>
 
     <modules>
         <module>domain-base</module>
+        <module>domain-hibernate</module>
     </modules>
 
     <dependencyManagement>
@@ -64,6 +66,11 @@
                 <groupId>javax.persistence</groupId>
                 <artifactId>javax.persistence-api</artifactId>
                 <version>${javax.persistence-api.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.hibernate</groupId>
+                <artifactId>hibernate-core</artifactId>
+                <version>${hibernate-core.version}</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
