--- a/domain-base/pom.xml
+++ b/domain-base/pom.xml
@@ -26,7 +26,7 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>domain-base</artifactId>
+    <artifactId>hexagonal-domain-base</artifactId>
     <name>Domain Model Base Classes</name>
 
     <dependencies>
