--- a/domain-hibernate/pom.xml
+++ b/domain-hibernate/pom.xml
@@ -26,13 +26,13 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>domain-hibernate</artifactId>
+    <artifactId>hexagonal-domain-hibernate</artifactId>
     <name>Domain Model Hibernate Support</name>
 
     <dependencies>
         <dependency>
             <groupId>net.pkhapps.hexagonal</groupId>
-            <artifactId>domain-base</artifactId>
+            <artifactId>hexagonal-domain-base</artifactId>
             <version>${project.version}</version>
         </dependency>
         <dependency>
